--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ button {
 
 /* Header */
 .header {
-  font-family: "PT Sans", sans-serif;
+  font-family: var(--font-heading);
   display: flex;
   align-items: center;
   padding-top: 4rem;
@@ -159,7 +159,7 @@ button {
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  font-family: "PT Sans", sans-serif;
+  font-family: var(--font-heading);
 }
 
 .main-title h1 {
@@ -180,7 +180,8 @@ button {
   content: "/";
   padding: 0 0.5rem;
 }
-.main-title .breadcrumbs a {
+.main-title .breadcrumbs a,
+.main-title .breadcrumbs li {
   color: rgba(255, 255, 255, 0.8);
 }
 
