--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,19 +10,6 @@
   box-sizing: border-box;
 }
 
-/* 
- Xem video a Son
- - Đặt biến trong css -> Ok
- - Thêm favicon: 12.36 -> Ok
-
- -Common : 16:25> Ok
- 
- - Bacground- hero: dùng linear-gradient -> thay cho như hiện tại: 22:30 -> Ok
- - dùng flex-grow: 1 cho padding-top header
- 
- 
-*/
-
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -32,6 +19,7 @@ body {
   font-family: var(--font-secondary);
   font-size: 1.5rem;
   line-height: 1.42857143;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 a {
@@ -52,6 +40,7 @@ select {
 img {
   max-width: 100%;
   max-height: 100%;
+  transition: all ease 0.3s;
 }
 h1,
 h2,
@@ -71,16 +60,8 @@ button {
   transition: all 0.3s ease-in-out;
 }
 
-/* Common */
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
 /* Top Page */
 .top-page {
-  min-height: 497px;
   background: linear-gradient(rgba(0, 0, 0, 0.6)),
     url(../img/banner-2.jpg) no-repeat center / cover;
 }
@@ -108,12 +89,11 @@ button {
 }
 
 .header .inner {
-  min-width: 1170px;
   display: flex;
   justify-content: space-between;
 }
 
-.header .header__logo {
+.header .header__logo img {
   height: 33px;
 }
 
@@ -122,17 +102,24 @@ button {
   gap: 0.8rem;
 }
 
+.header-right .icon-show-more {
+  display: none;
+}
+
+label[for="navbar-toggle"] {
+  display: none;
+}
+
 /* Navbar */
-.navbar {
-  display: flex;
+.header .navbar {
   padding: 0 1.5rem;
 }
 
-.navbar > li {
+.header .navbar > li {
   position: relative;
 }
 
-.navbar > li > a {
+.header .navbar > li > .item-link > a {
   padding: 0.6rem 2.5rem 2rem;
   text-transform: uppercase;
   letter-spacing: 1.1px;
@@ -141,45 +128,13 @@ button {
   display: inline-block;
 }
 
-.navbar > li > a:hover {
-  color: var(--color-primary);
-}
-
-.navbar .sub-menu {
+.header .navbar .sub-menu {
   position: absolute;
   width: 220px;
   background-color: #fff;
   top: 100%;
   left: 0;
   font-family: var(--font-secondary);
-  box-shadow: 0px 13px 25px -12px rgba(0, 0, 0, 0.25);
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.3s;
-  transform: scaleY(0);
-  transform-origin: 100% 2%;
-}
-
-.navbar > li:hover .sub-menu {
-  opacity: 1;
-  visibility: visible;
-  transform: scaleY(1);
-}
-
-.navbar .sub-menu a {
-  display: block;
-  padding-left: 2.5rem;
-  line-height: 4.5rem;
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 1.6rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  text-transform: capitalize;
-}
-
-.navbar .sub-menu a:hover {
-  color: #fff;
-  background-color: var(--color-primary);
-  padding-left: 2.9rem;
 }
 
 /* User action */
@@ -281,18 +236,16 @@ button {
 }
 
 /* Main content */
-.main-content .inner {
-  margin: 0 -1.5rem;
-  display: flex;
+.main-content {
+  margin-top: 11rem;
+  margin-bottom: 10rem;
 }
 
 /* Sidebar*/
 .main-content .sidebar {
-  width: 25%;
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  padding: 0 1.5rem;
 }
 
 .main-content .form-search {
@@ -317,229 +270,6 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.09);
 }
 
-.course-list h3 {
-  font-size: 1.6rem;
-  font-weight: 700;
-  margin-bottom: 2rem;
-}
-
-.course-list ul {
-  border: 1px solid rgba(0, 0, 0, 0.05);
-}
-.course-list ul li a {
-  line-height: 40px;
-  color: rgba(0, 0, 0, 0.7);
-  padding-left: 2.5rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  display: flex;
-}
-
-.course-list ul li a:hover {
-  color: var(--color-secondary);
-  padding-left: 3.5rem;
-}
-
-/* Content */
-.main-content {
-  margin-top: 11rem;
-  margin-bottom: 10rem;
-}
-.main-content .content {
-  width: 75%;
-  padding: 0 1.5rem;
-}
-
-/* nav-tab */
-.nav-tab {
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  margin-bottom: 7rem;
-}
-
-.nav-tab li a {
-  padding: 0.29em 1.4rem;
-  border-radius: 15px;
-  color: rgba(0, 0, 0, 0.8);
-  display: inline-block;
-}
-
-.nav-tab li a.active,
-.nav-tab li a:hover {
-  background-color: var(--color-secondary);
-  color: #fff;
-}
-
-/* Card List */
-.list-card {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -1.5rem;
-  row-gap: 3rem;
-}
-
-.list-card .col-item {
-  width: calc(100% / 3);
-  padding: 0 1.5rem;
-}
-
-.list-card .item-card__img {
-  aspect-ratio: 270/217;
-  display: flex;
-  position: relative;
-  overflow: hidden;
-}
-.list-card .item-card__img img {
-  transition: 0.5s;
-}
-.list-card .item-card__img:hover img,
-.list-card .item-card:hover .item-card__img img {
-  opacity: 0.8;
-  transform: scale3D(1.1, 1.1, 1);
-}
-
-.list-card .item-card__img .icon-top-right {
-  position: absolute;
-  width: 22rem;
-  font-size: 2.4rem;
-  color: #fff;
-  background: var(--color-primary);
-  height: 50px;
-  transform: rotate(35deg);
-  right: -9.4rem;
-  top: -1.2rem;
-  z-index: 2;
-}
-.list-card .item-card__img .icon-top-right i {
-  position: absolute;
-  right: 47%;
-  bottom: 0.7rem;
-}
-
-.list-card .item-card__content {
-  border: 1px solid #eeeeee;
-  padding: 1.5rem 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.list-card .item-card__title {
-  font-size: 1.8rem;
-  font-weight: 700;
-  line-height: 2.4rem;
-  color: #464646;
-}
-.list-card .item-card__title a:hover,
-.list-card .item-card:hover .item-card__title a {
-  color: var(--color-primary);
-}
-
-.list-card .item-card .description {
-  color: #000;
-  line-height: 2.2rem;
-}
-
-.list-card .item-card .info {
-  display: flex;
-  color: rgba(0, 0, 0, 0.6);
-  align-items: center;
-  justify-content: space-between;
-  gap: 1.5rem;
-}
-
-.list-card .item-card .info .author {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.list-card .item-card .info .author img {
-  width: 4rem;
-  height: 4rem;
-  border-radius: 50%;
-}
-
-.list-card .item-card .info .number-user {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.list-card .item-card .info .price a {
-  position: relative;
-  background-color: var(--color-primary);
-  width: 6.6rem;
-  line-height: 3.2rem;
-  text-align: center;
-  text-transform: uppercase;
-  border-radius: 3rem;
-  color: #fff;
-  display: inline-block;
-  font-weight: 700;
-  transition: all ease 0.3s;
-}
-
-.list-card .item-card .info .price .free {
-  background-color: var(--color-secondary);
-  font-weight: 400;
-}
-
-.list-card .item-card .info .price a:before {
-  pointer-events: none;
-  position: absolute;
-  content: "";
-  top: 100%;
-  left: 5%;
-  height: 1rem;
-  width: 90%;
-  opacity: 0;
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0.35) 0%,
-    rgba(0, 0, 0, 0) 80%
-  );
-  transition: all ease 0.3s;
-}
-.list-card .item-card .info .price a:hover {
-  transform: translateY(-0.5rem);
-}
-
-.list-card .item-card .info .price a:hover:before {
-  opacity: 1;
-  transform: translateY(0.5rem);
-}
-
-/* Navigation */
-.navigation {
-  display: flex;
-  gap: 1rem;
-  margin-top: 7.5rem;
-}
-.navigation li a {
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.8rem;
-  padding: 0.28rem 0.98rem;
-  display: inline-block;
-  color: rgba(0, 0, 0, 0.3);
-  font-weight: 600;
-}
-
-.navigation li a.active,
-.navigation li a:hover {
-  color: var(--color-secondary);
-  border-color: var(--color-secondary);
-}
-
-.navigation li a.next {
-  background-color: var(--color-secondary);
-  color: #fff;
-  font-size: 1.4rem;
-  margin-left: 1rem;
-  text-transform: uppercase;
-  padding: 0.35rem 1.26rem;
-}
-
 /* Footer */
 .footer {
   background-color: #151515;
@@ -547,17 +277,7 @@ button {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer .inner {
-  display: flex;
-  margin: 0 -1.5rem;
-}
-
-.footer-item {
-  padding: 0 1.5rem;
-}
-
 .footer .footer-logo {
-  width: 25%;
   font-size: 1.4rem;
 }
 
@@ -566,10 +286,6 @@ button {
   display: flex;
   align-items: center;
   gap: 2.4rem;
-}
-
-.footer-list {
-  width: calc(50% / 3);
 }
 
 .footer-item h3 {
@@ -586,10 +302,6 @@ button {
 
 .footer-list li a:hover {
   color: var(--color-primary);
-}
-
-.footer .footer-subscribe {
-  width: 25%;
 }
 
 .footer-description {
@@ -657,4 +369,169 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 1199.98px) {
+  .header .navbar > li > .item-link > a {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .header .inner {
+    position: relative;
+  }
+  .header__logo {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+
+  .header .navbar {
+    position: absolute;
+    left: 0;
+    top: calc(100% + 2rem);
+    border: none;
+    box-shadow: none;
+    background: rgba(0, 0, 0, 0.9);
+    padding: 0;
+    max-height: 0;
+    right: 0;
+    overflow-y: auto;
+    transition: all linear 0.3s;
+  }
+
+  #navbar-toggle:checked ~ .navbar {
+    max-height: 40rem;
+  }
+
+  label[for="navbar-toggle"] {
+    display: block;
+    cursor: pointer;
+    width: 2.6rem;
+  }
+  .header .navbar-toggle {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .header span.icon-bar {
+    width: 2.6rem;
+    background: #fff;
+    display: inline-block;
+    height: 0.2rem;
+    border-radius: 0.1rem;
+  }
+
+  .header .navbar > li {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  .header .navbar > li > .item-link {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header .navbar > li > .item-link > a {
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    line-height: 4.5rem;
+    font-weight: normal;
+    padding: 0 0 0 1.5rem;
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+  }
+
+  .header-right .icon-show-more {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 6rem;
+    color: #fff;
+    cursor: pointer;
+    border-left: 1px solid;
+    border-bottom: 1px solid;
+    border-color: rgba(255, 255, 255, 0.15);
+    font-size: 1.8rem;
+  }
+
+  .header .navbar .sub-menu {
+    position: relative;
+    width: 100%;
+    max-height: 0;
+    transition: all ease 1s;
+    overflow: hidden;
+  }
+
+  .header .navbar input[type="checkbox"]:checked ~ .sub-menu {
+    max-height: 705px;
+  }
+
+  .header .navbar .sub-menu li a {
+    font-size: 1.6rem;
+    color: rgba(0, 0, 0, 0.6);
+    line-height: 4.5rem;
+    text-transform: capitalize;
+    display: block;
+    padding: 0 0 0 2.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    transition: all 0.3s ease-in-out;
+  }
+  .header .navbar .sub-menu li a:hover {
+    padding-left: 2.9rem;
+    color: #fff;
+    background-color: var(--color-primary);
+  }
+
+  .footer-row-inner {
+    row-gap: 6rem;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .top-page .hero {
+    padding: 20rem 0 12rem 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .header .navbar {
+    display: flex;
+  }
+  .header .navbar > li > .item-link > a:hover {
+    color: var(--color-primary);
+  }
+
+  .header .navbar .sub-menu {
+    box-shadow: 0px 13px 25px -12px rgba(0, 0, 0, 0.25);
+    transition: 0.3s;
+    transform: scaleY(0);
+    transform-origin: 100% 2%;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .header .navbar > li:hover .sub-menu {
+    opacity: 1;
+    visibility: visible;
+    transform: scaleY(1);
+  }
+
+  .header .navbar .sub-menu a {
+    display: block;
+    padding-left: 2.5rem;
+    line-height: 4.5rem;
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 1.6rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    text-transform: capitalize;
+  }
+
+  .header .navbar .sub-menu a:hover {
+    color: #fff;
+    background-color: var(--color-primary);
+    padding-left: 2.9rem;
+  }
 }
