--- a/assets/css/course.css
+++ b/assets/css/course.css
@@ -30,23 +30,24 @@
   margin-bottom: 10rem;
 }
 
-/* nav-tab */
-.nav-tab {
+/* course-nav-tab */
+.course-nav-tab {
   display: flex;
   justify-content: center;
   gap: 2rem;
   margin-bottom: 7rem;
+  flex-wrap: wrap;
 }
 
-.nav-tab li a {
+.course-nav-tab li a {
   padding: 0.29em 1.4rem;
   border-radius: 15px;
   color: rgba(0, 0, 0, 0.8);
   display: inline-block;
 }
 
-.nav-tab li a.active,
-.nav-tab li a:hover {
+.course-nav-tab li a.active,
+.course-nav-tab li a:hover {
   background-color: var(--color-secondary);
   color: #fff;
 }
@@ -217,5 +218,9 @@
   .course-row-content {
     flex-direction: column-reverse;
     row-gap: 8rem;
+  }
+
+  .course-nav-tab {
+    gap: 1rem;
   }
 }
