--- a/assets/css/course.css
+++ b/assets/css/course.css
@@ -2,6 +2,36 @@
 
 /* Sidebar */
 /* .sidebar-course{} */
+
+/* Sidebar*/
+.sidebar-course {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.sidebar-course .form-search {
+  height: 4.3rem;
+  position: relative;
+}
+.sidebar-course .form-search button {
+  width: 3.7rem;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+  height: 100%;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.5);
+  border-radius: 0 2rem 2rem 0;
+}
+.sidebar-course .form-search input {
+  padding: 0 4rem 0 2rem;
+  border-radius: 2rem;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.09);
+}
+
 .sidebar__item-list h3 {
   font-size: 1.6rem;
   font-weight: 700;
